Changing just a few titles to test

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/photographer-icon.png" />
+  <link rel="icon" href="%PUBLIC_URL%/dog-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/photographer-icon.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/dog-icon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Travel With Catherine</title>
+  <title>Zampa's Chronicles</title>
 </head>
 
 <body className="p-0 m-0 box-border min-h-screen bg-white relative">
